...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_files"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_weight="1"
            app:backgroundTint="@color/secondaryColor"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_file"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_aftermovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_weight="1"
            app:backgroundTint="@color/secondaryColor"
...
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <GridLayout
                android:id="@+id/image_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3"/>

        </ScrollView>

    </RelativeLayout>

    <ImageView
        android:id="@+id/show_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout"
        android:layout_below="@id/description"
        android:contentDescription="@string/full_screen_image_content_description"
        android:visibility="invisible"/>

    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout"
        android:layout_below="@id/description"
        android:visibility="invisible">

...
