<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ch.epfl.sweng.groupup.activity.event.description.EventDescriptionActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/tool_bar">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/event_description_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/text_margin"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text="@string/no_event_name"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/large_header_size" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_scrolling"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/remove_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="mini"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/ic_delete" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_event_modification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="65dp"
        app:fabSize="mini"
        app:layout_anchor="@+id/remove_event_button"
        app:layout_anchorGravity="center|left"
        app:srcCompat="@drawable/ic_save" />

</android.support.design.widget.CoordinatorLayout>
