...
            android:id="@+id/endDate"
            android:text="@string/no_event_end_date"
            android:layout_below="@id/event_description_start_date"
            android:layout_toRightOf="@id/event_description_tv_end_date" />

        <TextView
            android:id="@+id/event_description_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EventCategories"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/event_description_tv_description"
            android:layout_below="@+id/event_description_tv_end_date"/>

        <EditText
            android:id="@+id/event_description_description"
            style="@style/EventFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_description_tv_description"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
...
