...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar">

    <!-- The LinearLayout of all the elements in the ScrollView -->
    <LinearLayout
        android:id="@+id/linear_layout_event_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">
...
